--- a/style.css
+++ b/style.css
@@ -31,8 +31,8 @@ body {
   height: 100vh;
   width: 100vw;
   display: grid;
-  grid-template-columns: 1fr 4fr;
-  grid-template-rows: 2fr 9fr 1fr;
+  grid-template-columns: 1fr 5fr;
+  grid-template-rows: 1fr 16fr 1fr;
 }
 
 /* SIDEBAR */
@@ -44,24 +44,24 @@ body {
   color: white;
   grid-area: 1 / 1 / 4 / 2;
   display: grid;
-  grid-template-rows : 1fr 4fr 3fr;
+  grid-template-rows : 1fr 3fr 4fr;
 }
 
 .sidebar-title {
   display: grid;
   grid-template-columns: 1fr 3fr;
-  padding-top: 15%;
+  padding-top: 12%;
   padding-left: 5%;
   font-family: "trigram", sans-serif;
 }
 
 .sidebar-title i {
-  color: var(--purple);
+  color: var(--green);
 }
 
 .sidebar h2 {
   margin: 0;
-  font-size: larger;
+  font-size: large;
 }
 
 .sidebar-links {
@@ -70,13 +70,17 @@ body {
   justify-items: left;
   align-items: center;
   font-family: "trigram";
-  font-size: medium;
+  font-size: small;
+}
+
+.sidebar-links p:hover {
+  color: var(--green);
+  transform: scale(1.1);
 }
 
 .sidebar-links i {
-margin-left: 20px;
 font-size: medium;
-padding-left: 15%;
+padding-left: 50%;
 }
 
 .sidebar p {
@@ -86,13 +90,82 @@ padding-left: 15%;
 /* HEADER */
 
 .header {
+  grid-area: 1 / 2 / 2 / 3;
+  background-color: white;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
+  box-shadow: rgba(240, 46, 170, 0.4) 0px 5px, rgba(240, 46, 170, 0.3) 0px 10px, rgba(240, 46, 170, 0.2) 0px 15px, rgba(240, 46, 170, 0.1) 0px 20px, rgba(240, 46, 170, 0.05) 0px 25px;
+}
 
+.user {
+  grid-area: 1 / 1 / 3 / 2;
+  padding-left: 5%;
+  font-family: "trench", sans-serif;
+  font-weight: bolder;
+  color: var(--purple);
+  display: grid;
+}
+
+.user p {
+  font-size: large;
+  margin-top: 5%;
+  margin-bottom: 0;
+}
+
+.user h2 {
+  font-size: x-large;
+  margin-bottom: 5%;
+  padding-left: 25%;
+  grid-area: 2 / 1 / 3 / 2;
+  align-self:auto;
+}
+
+.user img {
+  height: 60px;
+  object-fit: cover;
+  border-radius: 50%;
+  grid-area: 1 / 2 / 3 / 3;
+  align-self: center;
+}
+
+.search-bar {
+  grid-area: 1 / 2 / 2 / 3;
+  display: grid;
+  align-items: center;
+}
+
+input {
+  border: 2px solid var(--purple);
+  border-radius: 15px;
+  width: 70%;
+  justify-self: center;
+  font-family: "trench", sans-serif;
+  font-weight: bold;
+  color: black;
+  padding-left: 2%;
+}
+
+.toolbar{
+  grid-area: 2 / 2 / 3 / 3;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 5%;
+  margin-bottom: 20px;
+  color: var(--purple);
+}
+
+.toolbar i:hover {
+  transition: 0.2s;
+  transform: scale(1.2);
+  color: var(--green);
 }
 
 /* WRAPPER */
 
 .wrapper {
-
+  grid-area: 2 / 2 / 3 / 3;
 }
 
 .projects {
@@ -110,5 +183,6 @@ padding-left: 15%;
 /* FOOTER */
 
 footer {
-
+  grid-area: 3 / 2 / 4 / 3;
+  background-color: #D516BF;
 }
