Define footer style and layout

--- a/style.css
+++ b/style.css
@@ -71,11 +71,12 @@ body {
   align-items: center;
   font-family: "trigram";
   font-size: small;
+  gap: 5%;
 }
 
 .sidebar-links p:hover {
   color: var(--green);
-  transform: scale(1.1);
+  transform: scale(1.2);
 }
 
 .sidebar-links i {
@@ -157,8 +158,7 @@ input {
 }
 
 .toolbar i:hover {
-  transition: 0.2s;
-  transform: scale(1.2);
+  transform: scale(1.3);
   color: var(--green);
 }
 
@@ -185,4 +185,24 @@ input {
 footer {
   grid-area: 3 / 2 / 4 / 3;
   background-color: #D516BF;
+  color: white;
+  font-family: "trench", sans-serif;
+  font-weight: bold;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 5%;
+}
+
+footer a {
+  color: var(--yellow);
+}
+
+footer a:hover, .footer-links i:hover {
+  color: var(--green);
+  transform: scale(1.2);
+}
+
+.footer-copyright i {
+  color: var(--blue);
 }
