--- a/style.css
+++ b/style.css
@@ -191,12 +191,23 @@ input {
   padding-right: 2%;
 }
 
+.projects-cards a {
+  text-decoration: none;
+}
+
 .project-card {
   border: 2px solid var(--green);
   border-radius: 2px;
   box-shadow: rgba(240, 46, 170, 0.4) 5px 5px, rgba(240, 46, 170, 0.3) 10px 10px, rgba(240, 46, 170, 0.2) 15px 15px;
   width: 95%;
   margin-bottom: 5%;
+  display: flex;
+  flex-direction: column;
+}
+
+.project-card img {
+  height: 120px;
+  align-self: center;
 }
 
 .project-card:hover {
